write erase and start test map insert and other methos without erase

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,7 @@ set(CMAKE_CXX_STANDARD 98)
 add_library(testlib INTERFACE)
 
 add_subdirectory(unit_tests)
+
+add_executable(jalvaro_one_love
+        unit_tests/main.cpp
+        unit_tests/map.cpp)
