complite map, fix list iterators

--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -3,8 +3,7 @@ project(Google_tests)
 add_subdirectory(lib)
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
-set(TEST_FILES
-        list.cpp)
+set(TEST_FILES list.cpp)
 
 add_executable(Google_Tests_run ${TEST_FILES})
 target_link_libraries(Google_Tests_run gtest gtest_main testlib)
