fix vector, rewrite list little bit an complite Containers STL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,4 @@ add_subdirectory(unit_tests)
 
 add_executable(jalvaro_one_love
         unit_tests/main.cpp
-        unit_tests/map.cpp)
+        unit_tests/list.cpp)
