--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Google_tests)
 add_subdirectory(lib)
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
-set(TEST_FILES vector.cpp )
+set(TEST_FILES test.cpp queue.cpp stack.cpp vector.cpp list.cpp map.cpp )
 
 add_executable(Google_Tests_run ${TEST_FILES})
 target_link_libraries(Google_Tests_run gtest gtest_main testlib)
