rename path version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,4 @@ set(CMAKE_CXX_STANDARD 98)
 
 add_library(testlib INTERFACE)
 
-add_subdirectory(unit_tests)
-
-add_executable(jalvaro_one_love
-        unit_tests/main.cpp
-        unit_tests/list.cpp)
+add_subdirectory(tests)
